@@ -38,11 +38,12 @@
 #include "settings.h"
 #include "spec48.h"
 #include "spectrum.h"
+#include "ula.h"
 
 static int spec48_reset( void );
 
 const static periph_t peripherals[] = {
-  { 0x0001, 0x0000, spectrum_ula_read, spectrum_ula_write },
+  { 0x0001, 0x0000, ula_read, ula_write },
   { 0x0004, 0x0000, printer_zxp_read, printer_zxp_write },
   { 0x00e0, 0x0000, joystick_kempston_read, NULL },
 };
