@@ -127,7 +127,7 @@ writebyte_internal( libspectrum_word address, libspectrum_byte b )
 }
 
 void
-spectrum_contend_port( libspectrum_word port )
+ula_contend_port( libspectrum_word port )
 {
   printf( "%5d PC %04x\n", tstates, port );
   tstates += 4;
